--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
             </div>
         </div>    
     </header>
-            <main>
-              <section>
-                <div>
-                    <h3>See It in Action</h3>
-                    <h4>Explore the live preview and imagine your <br>brand in this bold new look.</h4>
+    <main>
+              <section class="action">
+                <div class="live-launch">
+                    <h4 class="txt-style2">See It in Action</h4>
+                    <p>Explore the live preview and imagine your <br>brand in this bold new look.</p>
+                    <button class="btn-primary">Launch Live Preview</button>
+                </div>
+                <div class="live-img">
+                    <img src="Assets/wc-mini.png" alt="">
                 </div>
               </section>
-            </main>
+    </main>        
     <footer>
                
     </footer>
