add footer section

--- a/index.html
+++ b/index.html
@@ -52,27 +52,37 @@
                     <h1>95%</h1>
                     <p>Satisfaction Rate</p>
                 </div>
-                
+
             </div>
-        </section> 
+        </section>
         <!-- user input -->
-         <section>
-            <h1>Let’s Get in <br>Touch</h1>
+        <section class="user">
+            <div><h1>Let’s Get in <br>Touch</h1></div>
+            <div class="input-area">
             <form action="">
-                 <label for="Email">Email</label>
-                 <input type="email" placeholder="example@email.com">
-                 <label for="name">Name</label>
-                 <input type="text" placeholder="full name" name="" id="">
-                 <label for="message">Message</label>
-                 <textarea name="message" id="message" placeholder="write your message..."></textarea>
-                 <button class="btn-primary">Get in touch</button>
+                <label for="Email">Email</label>
+                <input type="email" placeholder="example@email.com">
+                <label for="name">Name</label>
+                <input type="text" placeholder="full name" name="" id="">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" placeholder="write your message..."></textarea>
+                <input type="submit" value="Get in touch"  class="btn-primary ">
             </form>
-         </section>
+            </div>
+        </section>
     </main>
     <footer>
-
+            <h1>Temp<span class="txt-style footer-txt">lif</span>y</h1>
+            <p>Ready to elevate your online presence? Contact us today to discuss <br>your project and discover how we can bring your vision to life.</p>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>How it works</li>
+                <li>Services</li>
+            </ul>
     </footer>
 
 </body>
 
 </html>
+                
