add btn animation

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <input type="text" placeholder="full name" name="" id="">
                 <label for="message">Message</label>
                 <textarea name="message" id="message" placeholder="write your message..."></textarea>
-                <input type="submit" value="Get in touch"  class="btn-primary ">
+                <button class="btn-primary">Get in touch</button>
             </form>
             </div>
         </section>
